# exercises_for_programmers

./: .gitignore  Cargo.toml  README.md
chapter_2/: Cargo.toml
chapter_2/counting_the_number_of_characters/: Cargo.toml
chapter_2/counting_the_number_of_characters/src/: main.rs
chapter_2/mad_lib/: Cargo.toml
chapter_2/mad_lib/src/: main.rs
chapter_2/retirement_calculator/: Cargo.toml
chapter_2/retirement_calculator/src/: main.rs
chapter_2/saying_hello/: Cargo.toml
chapter_2/saying_hello/src/: main.rs
chapter_2/simple_math/: Cargo.toml
chapter_2/simple_math/src/: main.rs
chapter_2/src/: main.rs
chapter_3/: Cargo.toml
chapter_3/area_of_a_rectangular_room/: Cargo.toml
chapter_3/area_of_a_rectangular_room/src/: main.rs
chapter_3/computing_simple_interest/: Cargo.toml
chapter_3/currency_conversion/: Cargo.toml
chapter_3/paint_calculator/: Cargo.toml
chapter_3/pizza_party/: Cargo.toml
chapter_3/self-checkout/: Cargo.toml
gui/: Cargo.toml
gui/slint_calc/: Cargo.toml
gui/slint_calc/src/: main.rs
gui/taller_de_31/: Cargo.toml
gui/taller_de_31/src/: controller.rs  main.rs
j4fun/: Cargo.toml
j4fun/echor/: Cargo.toml  err
j4fun/echor/src/: main.rs
j4fun/hello/tests/: cli.rs
j4fun/src/: main.rs
