[package]
name = "exercises_for_programmers"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "chapter_2",
    "chapter_2/saying_hello",
    "chapter_2/counting_the_number_of_characters",
    "chapter_2/mad_lib",
    "chapter_2/simple_math",
    "chapter_2/retirement_calculator",
    "chapter_3",
    "chapter_3/area_of_a_rectangular_room",
    "chapter_3/computing_simple_interest",
    "chapter_3/currency_conversion",
    "chapter_3/paint_calculator",
    "chapter_3/pizza_party",
    "chapter_3/self-checkout"
]

[workspace.package]
authors = ["Yotoko"]
description = "Exercises for Programmers"
documentation = "Practice makes permanent."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
